<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/imgbtn_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_keyboard_arrow_left_24dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/description_back" />

        <ImageButton
            android:id="@+id/imgbtn_share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_share_24dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/description_share" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_appbar"
        android:scrollbars="none"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_title">

                <LinearLayout
                    android:id="@+id/layout_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:transitionName="simple_activity_transition"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/shape_round_rectangle_border_accent">

                        <TextView
                            android:id="@+id/text_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/test_category"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/test_title"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="28sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:gravity="end|center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_person_24dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/text_participant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/test_number"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"/>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@drawable/shape_divider_square">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="36dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_content"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="22sp"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/colorPrimaryText"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/test_context"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="22sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@drawable/shape_divider_square">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="36dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_assentient"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="22sp"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="6dp"
                                android:text="@string/test_number"
                                android:textColor="@color/colorAccent"
                                android:textSize="22sp"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/unit_person"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="22sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/colorPrimaryText"/>

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>